2012-11-19  Steve McIntyre  <steve.mcintyre@linaro.org>

	* sysdeps/generic/ldconfig.h (FLAG_AARCH64_LIB64): New macro.
	* elf/cache.c (print_entry): Print ",AArch64" for
	FLAG_AARCH64_LIB64

	* sysdeps/generic/ldconfig.h (FLAG_ARM_LIBHF): New macro.
	* elf/cache.c (print_entry): Print ",hard-float" for
	FLAG_ARM_LIBHF.

2012-11-18  David S. Miller  <davem@davemloft.net>

	With help from Joseph Myers.
	* sysdeps/ieee754/flt-32/e_j0f.c (__ieee754_y0f): Adjust tinyness
	cutoff to 2**-13.
	* sysdeps/ieee754/flt-32/e_j1f.c (__ieee754_y1f): Adjust tinyness
	cutoff to 2**-25.
	* sysdeps/ieee754/ldbl-128/e_j0l.c (U0): New constant.
	( __ieee754_y0l): Avoid arithmetic underflow when 'x' is very
	small.
	* sysdeps/ieee754/ldbl-128/e_j1l.c (__ieee754_y1l): Likewise.
	* math/libm-test.inc (y0_test): New tests.
	(y1_test): New tests.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Update.
	* sysdeps/sparc/fpu/libm-test-ulps: Update.

2012-11-18  Andreas Schwab  <schwab@linux-m68k.org>

	* configure.in (libc_cv_ld_gnu_indirect_function): Use .quad on
	64-bit targets.
	* configure: Regenerated.

2012-11-17  David S. Miller  <davem@davemloft.net>

	[BZ #14811]
	* sysdeps/ieee754/ldbl-128/e_powl.c (__ieee754_powl): Saturate
	nonzero exponents with absolute value below 0x1p-128 to +/-
	0x1p-128.

2012-11-17  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/fxstatat.c: Include <string.h>.

	* elf/dl-runtime.c [!ELF_MACHINE_NO_PLT]: Make code unconditional.

	* posix/getconf-speclist.c: New file.
	* posix/posix-envs.def: Likewise.
	* posix/confstr.c (START_ENV_GROUP): New macro.
	(END_ENV_GROUP): Likewise.
	(KNOWN_ABSENT_ENVIRONMENT): Likewise.
	(KNOWN_PRESENT_ENV_STRING): Likewise.
	(KNOWN_PRESENT_ENVIRONMENT): Likewise.
	(UNKNOWN_ENVIRONMENT): Likewise.
	(confstr): Include posix-envs.def instead of handling
	_CS_V7_WIDTH_RESTRICTED_ENVS, _CS_V6_WIDTH_RESTRICTED_ENVS and
	_CS_V5_WIDTH_RESTRICTED_ENVS directly here.