@@ -1,3 +1,8 @@
+2012-11-19  Peng Haitao  <penght@cn.fujitsu.com>
+
+	[BZ #13763]
+	* sunrpc/bindrsvprt.c: Add lock to protect static variable.
+
 2012-11-19  Steve McIntyre  <steve.mcintyre@linaro.org>
 
 	* sysdeps/generic/ldconfig.h (FLAG_AARCH64_LIB64): New macro.
